# Facetracking_RobotArm_ROS2

./: CMakeLists.txt  output.txt  package.xml  run_source.sh  setup.cfg  setup.py
SWU_Project.egg-info/: SOURCES.txt  top_level.txt
SWU_Project/face_detection/config/: face_tracker.yaml
SWU_Project/face_detection/launch/: face_detection.launch.py
SWU_Project/face_detection/src/: face_detection_node.backup  face_detection_node.py
SWU_Project/msg/: ArmControl.msg  FaceCoordinates.msg
SWU_Project/robot_arm/: robot_arm_node.py
SWU_Project/robot_arm/config/: joint_limits.yaml  kinematics.yaml
SWU_Project/robot_arm/launch/: arduino_serial.launch.py  robot_arm_control.launch.py
SWU_Project/robot_arm/src/: arduino_control.py  robot_arm_node.py
SWU_Project/robot_arm/urdf/: braccio_arm.urdf
SWU_Project/srv/: ControlArm.srv
install/: local_setup.sh  setup.sh
install/SWU_Project/lib/SWU_Project/: face_detection_node  robot_arm_node
install/SWU_Project/share/SWU_Project/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/SWU_Project/share/SWU_Project/config/: face_tracker.yaml
install/SWU_Project/share/SWU_Project/launch/: robot_arm_control.launch.py
log/: latest_build
